@@ -1,10 +1,10 @@
 noinst_LTLIBRARIES = libinplace.la
 
 libinplace_la_SOURCES = \
-	im_circle.c \
+	im_draw_circle.c \
 	flood.c \
 	im_insertplace.c \
-	im_paintrect.c \
+	im_draw_rect.c \
 	im_plotmask.c \
 	inplace_dispatch.c \
 	line_draw.c \
